--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
     <string name="start_game">Nuevo Juego</string>
     <string name="btn_game">Avanzar</string>
     <string name="top_players">Jugadores Top</string>
+    <string name="player_name">Nombre:</string>
+    <string name="player_attempts">Intentos:</string>
     <string name="help">Como Jugar?</string>
     <string name="action_settings">Ajustes</string>
     <string name="menu_item_1">Casual game mode</string>
@@ -10,7 +12,4 @@
     <string name="ducks_count">0</string>
     <string name="tries">0</string>
     <string name="dragons_count">0</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
